Fixed tex errors

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@
 
 # Debug files
 *.dSYM/
+
+Docs/Paper/LaTex/template.aux
+Docs/Paper/LaTex/template.log
+Docs/Paper/LaTex/template.pdf
+Docs/Paper/LaTex/template.synctex.gz
